tests/dataset/tpc-ds/compiler/c/q20.error
/tmp/q20.c: In function ‘test_TPCDS_Q20_revenue_ratio’:
/tmp/q20.c:355:20: error: incompatible types when initializing type ‘const char *’ using type ‘tmp_item_t’
  355 |                    (tmp_item_t){.i_item_id = "ITEM2",
      |                    ^
/tmp/q20.c:364:54: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  364 |   if (test_TPCDS_Q20_revenue_ratio_result.len != tmp1.len) {
      |                                                      ^
      |                                                      ->
/tmp/q20.c:368:63: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  368 |       if (test_TPCDS_Q20_revenue_ratio_result.data[i3] != tmp1.data[i3]) {
      |                                                               ^
      |                                                               ->
/tmp/q20.c: In function ‘main’:
/tmp/q20.c:432:35: warning: implicit declaration of function ‘class_totals_item_list_t_create’ [-Wimplicit-function-declaration]
  432 |   class_totals_item_list_t tmp9 = class_totals_item_list_t_create(tmp8.len);
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q20.c:432:35: error: invalid initializer
/tmp/q20.c:436:34: warning: implicit declaration of function ‘filtered_item_list_t_create’ [-Wimplicit-function-declaration]
  436 |     filtered_item_list_t tmp11 = filtered_item_list_t_create(_gp.items.len);
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q20.c:436:34: error: invalid initializer
/tmp/q20.c:460:7: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  460 |       result_item_list_t_create(filtered.len * class_totals.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q20.c:460:7: error: invalid initializer
/tmp/q20.c:518:41: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  518 |   test_TPCDS_Q20_revenue_ratio_result = result;
      |                                         ^~~~~~
